Add best PC members

--- a/index.html
+++ b/index.html
@@ -954,12 +954,12 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Indian Institute of Technology Kharagpur </td>
                         </tr>
                         <tr>
-                            <td>Charlie Hargood </td>
+                            <td>Charlie Hargood <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> Bournemouth University </td>
                         </tr>
                         <tr>
-                            <td>Eelco Herder </td>
+                            <td>Eelco Herder <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> Radboud University </td>
                         </tr>
@@ -999,7 +999,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> UFMG </td>
                         </tr>
                         <tr>
-                            <td>David Millard </td>
+                            <td>David Millard <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> University of Southampton </td>
                         </tr>
@@ -1107,7 +1107,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> University of Southampton </td>
                         </tr>
                         <tr>
-				<td>Toine Bogers</td> 
+				        <td>Toine Bogers <i class="fa fa-trophy"></i></td> 
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> Aalborg University </td>
                         </tr>
@@ -1162,7 +1162,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> University College London </td>
                         </tr>
                         <tr>
-                            <td>Javier D. Fernández </td>
+                            <td>Javier D. Fernández <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> Vienna University of Economics and Business </td>
                         </tr>
@@ -1217,12 +1217,12 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Independent Consultant </td>
                         </tr>
                         <tr>
-                            <td>Dietmar Jannach </td>
+                            <td>Dietmar Jannach <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> AAU Klagenfurt </td>
                         </tr>
                         <tr>
-                            <td>Min-Yen Kan </td>
+                            <td>Min-Yen Kan <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> National University of Singapore </td>
                         </tr>
@@ -1237,7 +1237,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Kennesaw State University </td>
                         </tr>
                         <tr>
-                            <td>Hartmut Koenitz </td>
+                            <td>Hartmut Koenitz <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> University of Georgia </td>
                         </tr>
@@ -1247,7 +1247,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Telefonica Research </td>
                         </tr>
                         <tr>
-                            <td>Markus Krötzsch </td>
+                            <td>Markus Krötzsch <i class="fa fa-trophy"></i> </td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> TU Dresden </td>
                         </tr>
@@ -1342,7 +1342,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Virginia Tech </td>
                         </tr>
                         <tr>
-                            <td>Giovanni Semeraro </td>
+                            <td>Giovanni Semeraro <i class="fa fa-trophy"></i></td>
                             <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             <td> University of Bari </td>
                         </tr>
@@ -1407,6 +1407,7 @@ All submissions to this special track will be evaluated by a dedicated committee
                             <td> Facebook </td>
                         </tr>
                     </table>
+                    <p><b><i class="fa fa-trophy"></i> These reviewers were chosen to be the best among the program committee. They stood out in terms of review quality and length as well as engagement in discussions. Many congratulations and thanks for your contributions</b></p>
                 </div>
                 <!-- /.heading-section -->
             </div>
