updated Elizabeth bio

--- a/index.html
+++ b/index.html
@@ -518,6 +518,12 @@ community. ACM attendees will be invited to lend their expertise to the cause.
                 <p>
                     Elizabeth Kittrie is a Strategic Advisor for Data and Open Science at the National Library of Medicine (NLM) where she is involved in developing the NLM long-range strategic plan and leading data science and open science initiatives. Prior to joining to the NLM, she served as a Senior Advisor to the Associate Director for Data Science at the National Institutes of Health, where she led open innovation efforts including the Open Science Prize, a collaborative partnership between the NIH, Wellcome Trust and Howard Hughes Medical Institute. Kittrie has also served as Senior Advisor to the Chief Technology Officer of the U.S. Department of Health and Human Services, where she led open government activities across HHS and coordinated the Department’s efforts to develop a common Public Access Policy. Prior to joining HHS, Kittrie served as the first Associate Director for the Department of Biomedical Informatics at Arizona State University.
                 </p>
+		<h2>Abstract</h2>
+		<p><b>The US National Library of Medicine: A Platform for Biomedical Discovery and Data-Powered Health</b></p>
+		<p>
+		This talk will address the role of the National Library of Medicine in fostering data-powered health and serving as a platform for biomedical discovery.  It will examine emerging trends in the biomedical research landscape, such as the rapid growth of biomedical data sources, shifting paradigms for data sharing and open science, and the changing role of libraries in providing access to digital information.  The talk will cover the newly developed long-range vision of the National Library of Medicine, with its triple aim of: 1) accelerating discovery and advancing health through data-driven research; 2) reaching more people in more ways through enhanced dissemination and engagement; and 3) its contributions to building a workforce and populace that is empowered to conduct data-driven research and enabled to optimize health and healthcare delivery through access to new types of health information.  This talk will also examine the importance of co-creation, though partnerships and crowdsourcing, to achieve solutions that optimize the roles of government and stakeholders in improving health and healthcare through information resources.
+		</p>
+
             </div>
             <!-- /.row -->
         </div>
