--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">15:30 - 17:00</td>
     <td class="tg-031e">Mother - An Integrated Approach to Hypertext Domains - Claus Atzenbeck, Daniel Roßner and Manolis Tzagarakis
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
   <tr>
@@ -672,7 +672,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">15:30 - 17:00</td>
     <td class="tg-031e">VAnnotatoR: A Framework for Generating Multimodal Hypertexts - Alexander Mehler, Giuseppe Abrami, Christian Spiekermann and Matthias Jostock
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
 
