updated papers list, venue details and registration details

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">13:15 - 14:20</td>
     <td class="tg-031e">As Stable As You Are: Re-ranking Search Results using Query-Drift Analysis - Haggai Roitman, Ella Rabinovich and Oren Sar Shalom
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
   <tr>
@@ -488,7 +488,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">13:15 - 14:20</td>
     <td class="tg-031e">Embedding Networks with Edge Attributes - Palash Goyal, Homa Hosseinmardi, Emilio Ferrara and Aram Galstyan
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
 
@@ -505,7 +505,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">13:15 - 14:20</td>
     <td class="tg-031e"> Privacy-Aware Tag Recommendation for Image Sharing - Ashwini Tonge, Cornelia Caragea and Anna Squicciarini
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
   <tr>
@@ -513,7 +513,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">13:15 - 14:20</td>
     <td class="tg-031e">Recommending Teammates with Deep Neural Networks - Palash Goyal, Anna Sapienza and Emilio Ferrara
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
 <tr>
@@ -576,7 +576,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">10:30 - 11:35</td>
     <td class="tg-031e">The Utility Problem of Web Content Popularity Prediction - Nuno Moniz and Luis Torgo
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
 <tr>
@@ -592,7 +592,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">11:35 - 12:30</td>
     <td class="tg-031e">Content Driven Enrichment of Formal Text Using Concept Definitions and Applications - Abhinav Jain, Nitin Gupta, Shashank Mujumdar, Sameep Mehta and Rishi Madhok
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
   <tr>
@@ -773,7 +773,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">14:40 - 14:55</td>
     <td class="tg-031e">Dynamics and Prediction of Clicks on News from Twitter - Arthi Ramachandran, Lucy Wang and Augustin Chaintreau
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
   <tr>
@@ -781,7 +781,7 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e">14:55 - 15:10</td>
     <td class="tg-031e"> To Post or Not to Post: Using Online Trends to Predict Popularity of Offline Content - Sofiane Abbar, Carlos Castillo and Antonio Sanfilippo
 </td>
-    <td class="tg-031e">Full paper</td>
+    <td class="tg-031e">Short paper</td>
   </tr>
 
   <tr>
@@ -1934,13 +1934,13 @@ http://www.templatemo.com/tm-406-flex
                             <td class="tg-031e">Workshop-Only Registration (Advance, Late and On-Site)</td>
                             <td class="tg-031e">USD 200.00</td>
                             <td class="tg-031e">USD 250.00</td>
-                            <td class="tg-031e"></td>
+                            <td class="tg-031e">USD 200.00</td>
                         </tr>
                         <tr>
                             <td class="tg-031e">Local Registration (participants from MD, VA, DE only)*</td>
-                            <td class="tg-031e">USD 300.00</td>
-                            <td class="tg-031e"></td>
                             <td class="tg-031e">USD 250.00</td>
+                            <td class="tg-031e"></td>
+                            <td class="tg-031e">USD 200.00</td>
                         </tr>
                     </table>
                     <!--h3>Advance Registration (Conference and Workshops)</h3>
@@ -1977,10 +1977,17 @@ http://www.templatemo.com/tm-406-flex
             <div class="row">
                 <div class="heading-section col-md-12 text-center">
                     <h2>Venue</h2>
-                    <p>Towson University Smith Hall Auditorium, Baltimore</p>
+                    <p>College of Liberal Arts, Towson University, Baltimore</p>
                 </div>
                 <!-- /.heading-section -->
             </div>
+	    <div class="row">
+                    <div class="col-md-12">
+                       <div class="googlemap-wrapper">
+                            <div id="map_canvas" class="map-canvas"></div>
+                        </div> <!-- /.googlemap-wrapper -->
+                    </div> <!-- /.col-md-12 -->
+                </div> <!-- /.row -->
             <!-- /.row -->
             <div class="row">
                 <div class="portfolio-item col-md-3 col-sm-6">
@@ -2077,14 +2084,14 @@ http://www.templatemo.com/tm-406-flex
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <!-- Google Map -->
-    <!--script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <script src="js/vendor/jquery.gmap3.min.js"></script>
 
         <script type="text/javascript">
             jQuery(function($){
                 $('#map_canvas').gmap3({
                     marker:{
-                        address: '39.392516, -76.612644'
+                        address: '39.395041, -76.609356'
                     },
                         map:{
                         options:{
@@ -2097,7 +2104,7 @@ http://www.templatemo.com/tm-406-flex
 
                 $('body').bind('touchstart', function() {});
             });
-        </script-->
+        </script>
     <!-- templatemo 406 flex -->
 </body>
 
