updated registration details

--- a/index.html
+++ b/index.html
@@ -1937,7 +1937,7 @@ http://www.templatemo.com/tm-406-flex
                             <td class="tg-031e">USD 200.00</td>
                         </tr>
                         <tr>
-                            <td class="tg-031e">Local Registration (participants from MD, VA, DE only)*</td>
+                            <td class="tg-031e">Local Registration (participants from MD, VA, PA, DE only)*</td>
                             <td class="tg-031e">USD 250.00</td>
                             <td class="tg-031e"></td>
                             <td class="tg-031e">USD 200.00</td>
