updated program schedule

--- a/index.html
+++ b/index.html
@@ -398,18 +398,33 @@ http://www.templatemo.com/tm-406-flex
                     <h2>Program</h2>
                     <table>
                         <tr>
-                            <td><a href="accepted_papers.html" target=_blank>Accepted Papers</td>
+				<td><a href="accepted_papers.html" target=_blank>Accepted Papers</a></td>
             </tr>
             <tr>
-                <td><a href="accepted_tutorials.html" target=_blank>Accepted Tutorials</td>
+		    <td><a href="accepted_tutorials.html" target=_blank>Accepted Tutorials</a></td>
             </tr>
             <tr>
-                <td><a href="accepted_workshops.html" target=_blank>Accepted Workshops</td>
+		    <td><a href="accepted_workshops.html" target=_blank>Accepted Workshops</a></td>
             </tr>
         </table>
 
+<h2>Program for Day 1: 07/09/2018 </h2>
+<table id ="customers">
+  <tr>
+    <th class="tg-031e"> <b> Track </b> </th>
+    <th class="tg-031e"><b> Time Slot </b> </th>
+    <th class="tg-031e"><b> Title </b></th>
+    <th class="tg-031e"><b> Type </b></th>
+  </tr>
+  <tr>
+    <td class="tg-031e">-- </td>
+    <td class="tg-031e">All day</td>
+    <td class="tg-031e"><a href="accepted_tutorials.html" target=_blank>Tutorials</a> and <a href="accepted_workshops.html" target=_blank>Workshops</a></td>
+    <td class="tg-031e"></td>
+  </tr>
+  </table>
 
-<h2>Program for Day 1: 07/10/2018 </h2>
+<h2>Program for Day 2: 07/10/2018 </h2>
 <table id ="customers">
   <tr>
     <th class="tg-031e"> <b> Track </b> </th>
@@ -533,7 +548,7 @@ http://www.templatemo.com/tm-406-flex
 </table>
 
 
-<h2>Program for Day 2: 07/11/2018 </h2>
+<h2>Program for Day 3: 07/11/2018 </h2>
 <table id ="customers">
   <tr>
     <th class="tg-031e"> <b> Track </b> </th>
@@ -687,7 +702,7 @@ http://www.templatemo.com/tm-406-flex
 
 
 
-<h2>Program for Day 3: 07/12/2018 </h2>
+<h2>Program for Day 4: 07/12/2018 </h2>
 <table id ="customers">
   <tr>
     <th class="tg-031e"> <b> Track </b> </th>
