Add best paper candidates

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ http://www.templatemo.com/tm-406-flex
     <tr>
     <td class="tg-031e"><b> ML </b> </td>
     <td class="tg-031e">13:15 - 14:20</td>
-    <td class="tg-031e">Joint Distributed Representation of Text and Structure of Semi-Structured Documents -Abhishek Laddha, Salil Joshi, Samiulla Shaikh and Sameep Mehta
+    <td class="tg-031e">Joint Distributed Representation of Text and Structure of Semi-Structured Documents -Abhishek Laddha, Salil Joshi, Samiulla Shaikh and Sameep Mehta <i class="fa fa-star"></i>
 </td>
     <td class="tg-031e">Full paper</td>
   </tr>
@@ -597,7 +597,7 @@ http://www.templatemo.com/tm-406-flex
 <tr>
     <td class="tg-031e"><b> Semantic </b> </td>
     <td class="tg-031e">11:35 - 12:30</td>
-    <td class="tg-031e">Know Thy Neighbors, and More! Studying the Role of Context in Entity Recommendation - Sumit Bhatia and Harit Vishwakarma
+    <td class="tg-031e">Know Thy Neighbors, and More! Studying the Role of Context in Entity Recommendation - Sumit Bhatia and Harit Vishwakarma <i class="fa fa-star"></i>
 </td>
     <td class="tg-031e">Full paper</td>
   </tr>
@@ -777,7 +777,7 @@ http://www.templatemo.com/tm-406-flex
   <tr>
     <td class="tg-031e"><b> News </b> </td>
     <td class="tg-031e">14:15 - 14:40</td>
-    <td class="tg-031e">A Deep Joint Network for Session-based News Recommendations with Contextual Augmentation - Lemei Zhang, Peng Liu and Jon Atle Gulla
+    <td class="tg-031e">A Deep Joint Network for Session-based News Recommendations with Contextual Augmentation - Lemei Zhang, Peng Liu and Jon Atle Gulla <i class="fa fa-star"></i>
 </td>
     <td class="tg-031e">Full paper</td>
   </tr>
@@ -844,11 +844,11 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e"><b> Conference Closing </b> </td>
     <td class="tg-031e">17:15 - 17:30</td>
     <td class="tg-031e">-- -- </td>
-    <td class="tg-031e">Conference Closing</td>
+    <td class="tg-031e">Conference Closing and Best paper awards</td>
   </tr>
 
 </table>
-
+Papers marked <i class="fa fa-star"></i> are candidates for the Best Paper award. 
                 </div>
                 <!-- /.heading-section -->
             </div>
