Link workshop programs

--- a/index.html
+++ b/index.html
@@ -422,6 +422,33 @@ http://www.templatemo.com/tm-406-flex
     <td class="tg-031e"><a href="accepted_tutorials.html" target=_blank>Tutorials</a> and <a href="accepted_workshops.html" target=_blank>Workshops</a></td>
     <td class="tg-031e"></td>
   </tr>
+    <tr>
+    <th class="tg-031e"> <b> Tutorial/Workshop </b> </th>
+    <th class="tg-031e"><b> Time Slot </b> </th>
+    <th class="tg-031e"><b> Name </b> </th>
+    <th class="tg-031e"><b> Program Link </b></th>
+  </tr>
+  <tr>
+    <td class="tg-031e"> Workshop </td>
+    <td class="tg-031e"> All day </td>
+    <td class="tg-031e">Human Factors in Hypertext (HUMAN) </td>
+    <td class="tg-031e"><a href="https://sites.google.com/view/revopid-2018/program?authuser=0">Program</a></td>
+  </tr>
+
+  <tr>
+    <td class="tg-031e"> Workshop </td>
+    <td class="tg-031e"> All day </td>
+    <td class="tg-031e">Opinion Mining, Summarization and Diversification (RevOpiD-2018)</td>
+    <td class="tg-031e"><a href="https://human.iisys.de/human18/program/">Program</a></td>
+  </tr>
+
+  <tr>
+    <td class="tg-031e"> Workshop </td>
+    <td class="tg-031e"> All day </td>
+    <td class="tg-031e">Narrative and Hypertext (NHT18)</td>
+    <td class="tg-031e"><a href="http://nht.ecs.soton.ac.uk/2018/programme.htm">Program</a></td>
+  </tr>
+
   </table>
 
 <h2>Program for Day 2: 07/10/2018 </h2>
