Add venue details plus dorm details

--- a/index.html
+++ b/index.html
@@ -424,34 +424,34 @@ http://www.templatemo.com/tm-406-flex
   </tr>
     <tr>
     <th class="tg-031e"> <b> Tutorial/Workshop </b> </th>
-    <th class="tg-031e"><b> Time Slot </b> </th>
+    <th class="tg-031e"><b> Time Slot -- Room </b> </th>
     <th class="tg-031e"><b> Name </b> </th>
     <th class="tg-031e"><b> Program Link </b></th>
   </tr>
   <tr>
     <td class="tg-031e"> Workshop </td>
-    <td class="tg-031e"> All day </td>
+    <td class="tg-031e"> All day -- CLA Classroom LA 4310</td>
     <td class="tg-031e">Human Factors in Hypertext (HUMAN) </td>
     <td class="tg-031e"><a href="https://human.iisys.de/human18/program/">Program</a></td>
   </tr>
 
   <tr>
     <td class="tg-031e"> Workshop </td>
-    <td class="tg-031e"> All day </td>
+    <td class="tg-031e"> All day --  CLA Classroom LA 4302 </td>
     <td class="tg-031e">Opinion Mining, Summarization and Diversification (RevOpiD-2018)</td>
     <td class="tg-031e"><a href="https://sites.google.com/view/revopid-2018/program?authuser=0">Program</a></td>
   </tr>
 
   <tr>
     <td class="tg-031e"> Workshop </td>
-    <td class="tg-031e"> All day </td>
+    <td class="tg-031e"> All day --  CLA Classroom LA 4315 </td>
     <td class="tg-031e">Narrative and Hypertext (NHT18)</td>
     <td class="tg-031e"><a href="http://nht.ecs.soton.ac.uk/2018/programme.htm">Program</a></td>
   </tr>
 
   </table>
 
-<h2>Program for Day 2: 07/10/2018 </h2>
+<h2>Program for Day 2: 07/10/2018 -- All Sessions in CLA Classroom LA 4310 </h2>
 <table id ="customers">
   <tr>
     <th class="tg-031e"> <b> Track </b> </th>
@@ -575,7 +575,7 @@ http://www.templatemo.com/tm-406-flex
 </table>
 
 
-<h2>Program for Day 3: 07/11/2018 </h2>
+<h2>Program for Day 3: 07/11/2018 -- All Sessions in CLA Classroom LA 4310</h2>
 <table id ="customers">
   <tr>
     <th class="tg-031e"> <b> Track </b> </th>
@@ -729,7 +729,7 @@ http://www.templatemo.com/tm-406-flex
 
 
 
-<h2>Program for Day 4: 07/12/2018 </h2>
+<h2>Program for Day 4: 07/12/2018 -- All Sessions in CLA Classroom LA 4310</h2>
 <table id ="customers">
   <tr>
     <th class="tg-031e"> <b> Track </b> </th>
@@ -2029,7 +2029,10 @@ Papers marked <i class="fa fa-star"></i> are candidates for the Best Paper award
                             <div id="map_canvas" class="map-canvas"></div>
                         </div> <!-- /.googlemap-wrapper -->
                     </div> <!-- /.col-md-12 -->
-                </div> <!-- /.row -->
+        </div> <!-- /.row -->
+        <div class="row">
+                       <object width="1024" height="768" data="./assets/parking_directions.pdf"></object>
+        </div> <!-- /.row -->
             <!-- /.row -->
             <div class="row">
                 <div class="portfolio-item col-md-3 col-sm-6">
@@ -2090,7 +2093,19 @@ Papers marked <i class="fa fa-star"></i> are candidates for the Best Paper award
                     <h3> Lodging </h3>
                     <p>
                         <li> <a href="https://www.starwoodmeeting.com/events/start.action?id=1801300829&key=363C9317">Sheraton Baltimore North</a>, Address: 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
-                        <li> Towson university student dorm (more info later) </li>
+                        <li> Towson university student dorm  </li>
+                    </p>
+                    <h3> Student dorm details </h3>
+                    <p>
+                        <b>Registration Process:</b> <br />           
+                        Overnight campers will check-in on the stated date listed below in the Barton House Lobby at the front desk. Please remind all attendees that they are responsible for paying their own parking.
+                        <br /> 
+                        <br />                                                         
+
+                        <b>Check -Out Process:</b> <br /> 
+                        Check-out: 1:00 p.m. on the date listed below. Attendees failing to return the room key, a charge of $75 per missing key will be applied to the User’s master account. User may check out by 1pm on day of departure. A late checkout fee of $25 per person per hour will apply for anyone checking out after 1pm. 
+                        <br /> 
+                        <br />      
                     </p>
                     <h3> Logistics </h3>
                     </p>
