Correct asset path

--- a/index.html
+++ b/index.html
@@ -2031,7 +2031,7 @@ Papers marked <i class="fa fa-star"></i> are candidates for the Best Paper award
                     </div> <!-- /.col-md-12 -->
         </div> <!-- /.row -->
         <div class="row">
-                       <object width="1024" height="768" data="./assets/parking_directions.pdf"></object>
+                       <object width="1024" height="768" data="assets/parking_directions.pdf"></object>
         </div> <!-- /.row -->
             <!-- /.row -->
             <div class="row">
