Fix room errors and add proceedings links

--- a/index.html
+++ b/index.html
@@ -406,6 +406,9 @@ http://www.templatemo.com/tm-406-flex
                         <tr>
                             <td><a href="accepted_workshops.html" target=_blank>Accepted Workshops</a></td>
                         </tr>
+                        <tr>
+                            <td><a href="https://dl.acm.org/citation.cfm?id=3209542">ACM digital library link for the proceedings </a></td>
+                        </tr>
                     </table>
                     <h2>Program for Day 1: 07/09/2018 </h2>
                     <table id="customers">
@@ -441,9 +444,15 @@ http://www.templatemo.com/tm-406-flex
                         </tr>
                         <tr>
                             <td class="tg-031e"> Workshop </td>
-                            <td class="tg-031e"> All day -- CLA Classroom LA 4315 </td>
+                            <td class="tg-031e"> All day -- CLA Classroom LA 4310 </td>
                             <td class="tg-031e">Narrative and Hypertext (NHT18)</td>
                             <td class="tg-031e"><a href="http://nht.ecs.soton.ac.uk/2018/programme.htm">Program</a></td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"> Tutorial </td>
+                            <td class="tg-031e"> All day -- CLA Classroom LA 4315 </td>
+                            <td class="tg-031e">Efficient Auto-generation of Taxonomies for Structured Knowledge Discovery and Organization</td>
+                            <td class="tg-031e"><a href="https://www.bell-labs.com/hypertext-2018-tutorial/">Program</a></td>
                         </tr>
                     </table>
                     <h2>Program for Day 2: 07/10/2018 -- All Sessions in CLA Classroom LA 4310 </h2>
@@ -2041,6 +2050,57 @@ http://www.templatemo.com/tm-406-flex
                     <h3> Logistics </h3>
                     </p>
                     Bus service between Sheraton hotel and conference venue will run in the morning and evening
+                    <h3> Shuttle Bus Schedule</h3>
+                    <table style="width:100%">
+                        <tr>
+                            <th><b>Date</b></th>
+                            <th><b>Time</b></th>
+                            <th><b>From</b></th>
+                            <th><b>To</b></th>
+                        </tr>
+                        <tr>
+                            <td>7/10, Tuesday</td>
+                            <td>08:00 am</td>
+                            <td>Sheraton</td>
+                            <td>CLA</td>
+                        </tr>
+                        <tr>
+                            <td>7/10, Tuesday</td>
+                            <td>05:30 pm</td>
+                            <td>CLA</td>
+                            <td>Sheraton</td>
+                        </tr>
+                        <tr>
+                            <td>7/11, Wednesday</td>
+                            <td>08:30 am</td>
+                            <td>Sheraton</td>
+                            <td>CLA</td>
+                        </tr>
+                        <tr>
+                            <td>7/11, Wednesday</td>
+                            <td>06:00 pm</td>
+                            <td>CLA</td>
+                            <td>Rusty Scupper (banquet location)</td>
+                        </tr>
+                        <tr>
+                            <td>7/11, Wednesday</td>
+                            <td>10:00 pm</td>
+                            <td>Rusty Scupper (banquet location)</td>
+                            <td>Sheraton -> Barton House</td>
+                        </tr>
+                        <tr>
+                            <td>7/12, Thursday</td>
+                            <td>8:30 am</td>
+                            <td>Sheraton</td>
+                            <td>CLA</td>
+                        </tr>
+                        <tr>
+                            <td>7/12, Thursday</td>
+                            <td>06:00 pm</td>
+                            <td>CLA</td>
+                            <td>Sheraton</td>
+                        </tr>
+                    </table>
                     </p>
                 </div>
                 <!-- /.col-md-4 -->
