Add sessions chairs

--- a/index.html
+++ b/index.html
@@ -482,6 +482,12 @@ http://www.templatemo.com/tm-406-flex
                             <td class="tg-031e">-- -- </td>
                         </tr>
                         <tr>
+                            <td class="tg-031e"><b> Computational Social Science</b> </td>
+                            <td class="tg-031e">10:30 - 11:40</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Lu Xiao **</b> </td>
+                            <td class="tg-031e"></td>
+                        </tr>
+                        <tr>
                             <td class="tg-031e"><b> Computational Social Science </b> </td>
                             <td class="tg-031e">10:30 - 11:40</td>
                             <td class="tg-031e">Detecting the correlation between sentiment and user- as well as text-level meta-data from benchmark corpora - Shubhanshu Mishra and Jana Diesner
@@ -507,6 +513,12 @@ http://www.templatemo.com/tm-406-flex
                             <td class="tg-031e">11:40 - 13:15</td>
                             <td class="tg-031e">-- --</td>
                             <td class="tg-031e">-- --</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> ML </b> </td>
+                            <td class="tg-031e">13:15 - 14:20</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Nikolaos Aletras **</b> </td>
+                            <td class="tg-031e"></td>
                         </tr>
                         <tr>
                             <td class="tg-031e"><b> ML </b> </td>
@@ -586,6 +598,12 @@ http://www.templatemo.com/tm-406-flex
                         <tr>
                             <td class="tg-031e"><b> Temporal </b> </td>
                             <td class="tg-031e">10:30 - 11:35</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Samiulla Shaikh **</b> </td>
+                            <td class="tg-031e"></td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> Temporal </b> </td>
+                            <td class="tg-031e">10:30 - 11:35</td>
                             <td class="tg-031e">Bootstrapping Web Archive Collections from Social Media - Alexander Nwala, Michele Weigle and Michael Nelson
                             </td>
                             <td class="tg-031e">Full paper</td>
@@ -634,6 +652,12 @@ http://www.templatemo.com/tm-406-flex
                         <tr>
                             <td class="tg-031e"><b> User Behaviour </b> </td>
                             <td class="tg-031e">13:45 - 15:00</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Charlie Hargood **</b> </td>
+                            <td class="tg-031e"></td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> User Behaviour </b> </td>
+                            <td class="tg-031e">13:45 - 15:00</td>
                             <td class="tg-031e">IntelliEye: Enhancing MOOC Learners' Video Watching Experience with Real-Time Attention Tracking -Tarmo Robal, Yue Zhao, Christoph Lofi and Claudia Hauff
                             </td>
                             <td class="tg-031e">Full paper</td>
@@ -657,6 +681,12 @@ http://www.templatemo.com/tm-406-flex
                             <td class="tg-031e">15:00 - 15:30</td>
                             <td class="tg-031e">-- --</td>
                             <td class="tg-031e">-- --</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> Hypertext </b> </td>
+                            <td class="tg-031e">15:30 - 17:00</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Mark Bernstein **</b> </td>
+                            <td class="tg-031e"></td>
                         </tr>
                         <tr>
                             <td class="tg-031e"><b> Hypertext </b> </td>
@@ -716,6 +746,12 @@ http://www.templatemo.com/tm-406-flex
                         <tr>
                             <td class="tg-031e"><b> Privacy </b> </td>
                             <td class="tg-031e">10:30 - 10:55</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Ujwal Gadiraju **</b> </td>
+                            <td class="tg-031e"></td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> Privacy </b> </td>
+                            <td class="tg-031e">10:30 - 10:55</td>
                             <td class="tg-031e">Understanding Privacy Dichotomy in Twitter - Taraneh Khazaei, Lu Xiao, Robert Mercer and Atif Khan
                             </td>
                             <td class="tg-031e">Full paper</td>
@@ -757,6 +793,12 @@ http://www.templatemo.com/tm-406-flex
                         <tr>
                             <td class="tg-031e"><b> News </b> </td>
                             <td class="tg-031e">14:15 - 14:40</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Nuno Moniz **</b> </td>
+                            <td class="tg-031e"></td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> News </b> </td>
+                            <td class="tg-031e">14:15 - 14:40</td>
                             <td class="tg-031e">A Deep Joint Network for Session-based News Recommendations with Contextual Augmentation - Lemei Zhang, Peng Liu and Jon Atle Gulla <i class="fa fa-star"></i>
                             </td>
                             <td class="tg-031e">Full paper</td>
@@ -792,6 +834,12 @@ http://www.templatemo.com/tm-406-flex
                             <td class="tg-031e">16:00 - 16:30</td>
                             <td class="tg-031e">-- --</td>
                             <td class="tg-031e">-- --</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e"><b> Blue Sky Ideas </b> </td>
+                            <td class="tg-031e">16:30 - 16:45</td>
+                            <td class="tg-031e"><b> ** Session Chaired by Thang Dinh **</b> </td>
+                            <td class="tg-031e"></td>
                         </tr>
                         <tr>
                             <td class="tg-031e"><b> Blue Sky Ideas </b> </td>
