updated conf nav details

--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@ http://www.templatemo.com/tm-406-flex
                     <h2>News</h2>
                     <ul>
                         <li>
+				<h3> Check out the Hypertext 2016 program via <a href="http://halley.exp.sis.pitt.edu/cn3/conferenceHomePage.php?conferenceID=154">Conference Navigator</a></h3></li>
+                        <li>
                             <h3> The list of accepted papers can be found <a href="accepted_papers.html">here</a></h3></li>
                         <li>
                             <h3> Registration info is up. Please see <a href="#Registration">here</a></h3></li>
