updated best paper awards

--- a/index.html
+++ b/index.html
@@ -342,6 +342,16 @@ http://www.templatemo.com/tm-406-flex
                     <h2>News</h2>
                     <ul>
                         <li>
+				<h3> 
+				Best Paper awards announced: 
+				<ul type="square">
+					<li><b>Best Paper Runner-Up</b>: Joint Distributed Representation of Text and Structure of Semi-Structured Documents; Abhishek Laddha, Salil Joshi, Samiulla Shaikh and Sameep Mehta.</li>
+
+					<li><b>Nelson Newcomer Award</b>: Know Thy Neighbors, and More! Studying the Role of Context in Entity Recommendation; Sumit Bhatia and Harit Vishwakarma.</li>
+					<li><b>Best Paper Award</b>: A Deep Joint Network for Session-based News Recommendations with Contextual Augmentation; Lemei Zhang, Peng Liu and Jon Atle Gulla.</li>
+				</ul>
+				</h3></li>
+                        <li>
 				<h3> Check out the Hypertext 2016 program via <a href="http://halley.exp.sis.pitt.edu/cn3/conferenceHomePage.php?conferenceID=154">Conference Navigator</a></h3></li>
                         <li>
                             <h3> The list of accepted papers can be found <a href="accepted_papers.html">here</a></h3></li>
